# path-tracing

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Geometry.h  Image.cpp  Image.h  ObjLoader.h  image_comparison.py  main.cpp  mitsuba_render.py
scenes/scene_02/: cbox.exr  cbox.xml
